--- a/back/package.json
+++ b/back/package.json
@@ -1,22 +1,15 @@
+
 {
-  "name": "back",
-  "version": "0.0.0",
-  "private": true,
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-rate-limit": "^7.3.1",
-    "express-session": "^1.18.0",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "~1.9.1",
-    "sqlite3": "^5.1.7"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "bcrypt": "^5.0.1",
+    "sqlite3": "^5.0.2"
   }
 }
