--- a/front/package.json
+++ b/front/package.json
@@ -1,19 +1,16 @@
+
 {
-  "name": "front",
-  "version": "0.0.0",
-  "private": true,
+  "name": "frontend",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-session": "^1.18.0",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "materialize-css": "^1.0.0"
   }
 }
